# rust-pycld2

./: Cargo.toml  README.md
cld2-sys/: Cargo.toml
examples/: analyze_texts.rs
pycld2-sys/: Cargo.toml  build.rs
pycld2-sys/src/: encodings.rs  flags.rs  languages.rs  lib.rs  wrapper.rs
src/: lib.rs
