[package]

name = "pycld2"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2021"

description = "Detect natural language used in text using the cld2 library"
license = "Unlicense"

repository = "https://github.com/ibukanov/rust-pycld2"
readme = "README.md"
keywords = ["text"]

[dependencies]
pycld2-sys = { path = "pycld2-sys" }
libc = "0.2.172"

[workspace]
members = ["pycld2-sys"]
