[package]

name = "pycld2-sys"
authors = ["Eric Kidd <git@randomhacks.net>"]
links = "pycld2"
build = "build.rs"
edition = "2021"

description = "Unsafe, low-level wrapper for cld2 language detection library with patches from pycld2 Python bindings repo"
license = "Unlicense/Apache-2.0"

repository = "https://github.com/ibukanov/rust-pycld2"

[dependencies]
libc = "0.2.172"

[build-dependencies]
cc = "1.2.56"
